# Equity-Cashflow-projection

./: Backtest  Backtest.ipynb  Backtest_extracted.py  Backtests  Commitment_Drwadown check  Model Documentation  NAV Logic.ipynb  Project plan for the PE cashflow projection engine.docx  README.md  Sentral - Portfolio Model - for CF 23.01.26.xlsx  Structural Cashflows-mc  Structural-cashflows.ipynb  Untitled-1.ipynb  anonymize_data.py  backtest_bucket_summary_conditional_2018_Q1_to_2025_Q3.csv  backtest_bucket_summary_conditional_2018_Q3_to_2025_Q3.csv  backtest_bucket_summary_unconditional_2018_Q1_to_2025_Q3.csv  backtest_portfolio_series_conditional_2018_Q1_to_2025_Q3.csv  backtest_portfolio_series_conditional_2018_Q3_to_2025_Q3.csv  backtest_portfolio_series_unconditional_2018_Q1_to_2025_Q3.csv  backtest_portfolio_summary_conditional_2018_Q1_to_2025_Q3.csv  backtest_portfolio_summary_conditional_2018_Q3_to_2025_Q3.csv  backtest_portfolio_summary_unconditional_2018_Q1_to_2025_Q3.csv  cashflows.txt  data.ipynb  data_preparation.ipynb  e-mail  error 1  error 2  fund.txt  grades.txt  kmp.txt  msci.xlsx  msci_projection.ipynb  pyproject.toml  terminated-funds-total  test_portfolio.xlsx  transition_matrix.ipynb
docs/: modeling_methodology.md  modeling_methodology_40p.md  modeling_methodology_deep_dive.md
model_fits/: Copula_Fit.ipynb  Distribution_Fits.ipynb  Grade_Transitions.ipynb  Omega_Calibration.ipynb  README.md  Simulate_Cashflows.ipynb  Timing_Curves.ipynb  fit_copula.py  fit_grade_transitions.py  fit_ratios.py  fit_timing_curves.py  simulate_cashflows.py
(+147 files in other folders)
